--- a/.github/workflows/porter_app_fullstack_1.yml
+++ b/.github/workflows/porter_app_fullstack_1.yml
@@ -15,7 +15,7 @@ jobs:
             - name: Setup porter
               uses: porter-dev/setup-porter@v0.1.0
               env:
-                  PORTER_VERSION: v0.60.0-dev
+                  PORTER_VERSION: v0.60.0
             - name: Deploy stack
               timeout-minutes: 30
               run: exec porter apply
