--- a/.github/workflows/porter_app_fullstack_1.yml
+++ b/.github/workflows/porter_app_fullstack_1.yml
@@ -14,6 +14,8 @@ jobs:
               run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
             - name: Setup porter
               uses: porter-dev/setup-porter@v0.1.0
+              env:
+                  PORTER_VERSION: "0.60.0"
             - name: Deploy stack
               timeout-minutes: 30
               run: exec porter apply
