--- a/.github/workflows/porter_app_fullstack_1.yml
+++ b/.github/workflows/porter_app_fullstack_1.yml
@@ -13,9 +13,10 @@ jobs:
               id: vars
               run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
             - name: Setup porter
-              uses: porter-dev/setup-porter@v0.1.0
-              env:
-                  PORTER_VERSION: "v0.60.1-dev"
+              uses: porter-dev/dev-setup-porter@v0.1.0
+              with:
+                version: v0.60.1-dev
+                token: ${{ secrets.PORTER_DEV_CODE_TOKEN}}
             - name: Deploy stack
               timeout-minutes: 30
               run: exec porter apply
