--- a/.github/workflows/porter_app_fullstack_1.yml
+++ b/.github/workflows/porter_app_fullstack_1.yml
@@ -19,7 +19,7 @@ jobs:
                 token: ${{ secrets.PORTER_DEV_CODE_TOKEN}}
             - name: Deploy stack
               timeout-minutes: 30
-              run: exec porter apply
+              run: exec porter apply -f porter.yaml
               env:
                 PORTER_APP_NAME: fullstack
                 PORTER_CLUSTER: "1"
