--- a/.github/workflows/porter-app-1-fullstack.yml
+++ b/.github/workflows/porter-app-1-fullstack.yml
@@ -3,36 +3,62 @@ on:
     branches:
       - main
 
-name: Simulated External Build & Porter Deploy
+name: Porter Test - Customer Equivalent
 jobs:
-  build-and-deploy:
+  porter-deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2.3.4
 
     - name: Set Github tag
       id: vars
-      run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-    # --- SIMULATING CIRCLECI BUILD START ---
-    # In CircleCI, they might run a standard docker build. 
-    # We do this here to create a local image before Porter touches it.
-    - name: Build image (Simulating CircleCI)
-      run: docker build -t fullstack:${{ steps.vars.outputs.sha_short }} .
-    # --- SIMULATING CIRCLECI BUILD END ---
+    - name: Disable containerd image store
+      shell: bash
+      run: |
+        # Docker 29.x defaults to containerd image store which has a push bug (moby/moby#51665)
+        # We disable the containerd snapshotter to avoid the bug
+        DAEMON_JSON="/etc/docker/daemon.json"
+        if [ -f "$DAEMON_JSON" ]; then
+          jq '. + {"features": {"containerd-snapshotter": false}}' "$DAEMON_JSON" > /tmp/daemon.json
+        else
+          echo '{"features": {"containerd-snapshotter": false}}' > /tmp/daemon.json
+        fi
+        sudo mv /tmp/daemon.json "$DAEMON_JSON"
+        sudo systemctl restart docker
 
-    - name: Porter Push (Tag and upload to Porter Registry)
+    - name: Build fullstack
       uses: porter-dev/porter-cli-action@v0.1.1
       with:
-        # Note: 'update push' looks for the image we built in the previous step
+        command: update build --app fullstack --tag ${{ steps.vars.outputs.sha_short }}
+      env:
+        PORTER_HOST: https://mauricio.withporter.run
+        PORTER_CLUSTER: "1"
+        PORTER_PROJECT: "1"
+        PORTER_TOKEN: ${{ secrets.PORTER_APP_1_988596736 }}
+        
+    - name: Push fullstack
+      uses: porter-dev/porter-cli-action@v0.1.1
+      with:
         command: update push --app fullstack --tag ${{ steps.vars.outputs.sha_short }}
       env:
         PORTER_HOST: https://mauricio.withporter.run
         PORTER_CLUSTER: "1"
         PORTER_PROJECT: "1"
         PORTER_TOKEN: ${{ secrets.PORTER_APP_1_988596736 }}
-
+        
+    - name: Update the image used for release
+      uses: porter-dev/porter-cli-action@v0.1.1
+      with:
+        command: update config --app release --tag ${{ steps.vars.outputs.sha_short }}
+      env:
+        PORTER_HOST: https://mauricio.withporter.run
+        PORTER_CLUSTER: "1"
+        PORTER_PROJECT: "1"
+        PORTER_TOKEN: ${{ secrets.PORTER_APP_1_988596736 }}
+        
     - name: Run the release job
       uses: porter-dev/porter-run-job-action@v0.1.0
       with:
@@ -51,4 +77,5 @@ jobs:
         PORTER_CLUSTER: "1"
         PORTER_PROJECT: "1"
         PORTER_TOKEN: ${{ secrets.PORTER_APP_1_988596736 }}
+        # Included from your local file to ensure it deploys to the right target
         PORTER_DEPLOYMENT_TARGET_ID: e1c624cc-6272-41a3-9cea-8c887a1efbcf
